Initialize_blog_page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <li><a href="about.html">关于我</a></li>
                     <li><a href="interest.html">我的兴趣</a></li>
                     <li><a href="contact.html">联系我</a></li>
+                    <li><a href="blogs_summary.html">个人博客</a></li>
                     <li><button id="themeSwitcher" class="theme-btn" aria-label="切换主题">🌙</button></li>
                 </ul>
             </nav>
