rename_large_card

--- a/blogs_summary.html
+++ b/blogs_summary.html
@@ -35,8 +35,8 @@
         </section>
         <section class="section">
             <div class="container">
-                <div class="projects-list">
-                    <article class="project-item">
+                <div class="large-cards-list">
+                    <article class="large-card">
                         <h2>欢迎来到我的个人博客</h2>
                         <p class="blog-meta">posted on 2025-10-01 by YewFence</p>
                         <p class="brief-summary">这里是YewFence的第一个个人博客，记录我在编程学习和生活中的点滴。</p>
