--- a/interest.html
+++ b/interest.html
@@ -32,8 +32,8 @@
     </section>
     <section class="section">
         <div class="container">
-            <div class="projects-list">
-                <article id="p1" class="project-item">
+            <div class="large-cards-list">
+                <article id="p1" class="large-card">
                     <h2>游戏成分</h2>
                     <p class="meta">包括但不限于Steam单机游戏和二次元手游
                     </p>
@@ -52,7 +52,7 @@
                         <li>人类一败涂地</li>
                     </ul>
                 </article>
-                <article id="p2" class="project-item">
+                <article id="p2" class="large-card">
                     <h2>兴趣编程</h2>
                     <p class="meta">前端，后端，算法，AI</p>
                     <ul class="bullets">
@@ -62,7 +62,7 @@
                         <li>AI：Stable Diffusion <p class="future">Qwen本地部署，SillyTavern</p></li>
                     </ul>
                 </article>
-                <article id="p3" class="project-item">
+                <article id="p3" class="large-card">
                     <h2>二次元</h2>
                     <p class="meta">番剧，轻小说</p>
                     <ul class="bullets">
