small_question_for_css_class_name

--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
                     <article class="card">
                         <h3>游戏成分</h3>
                         <p>啥都玩点，来者不拒</p>
-                        <a class="card_link" href="interest.html#p1"></a>
+                        <a class="card-link" href="interest.html#p1"></a>
                     </article>
                     <article class="card">
                         <h3>兴趣编程</h3>
                         <p>想研究一堆AI</p>
-                        <a class="card_link" href="interest.html#p2"></a>
+                        <a class="card-link" href="interest.html#p2"></a>
                     </article>
                     <article class="card">                     
                         <h3>二次元</h3>
                         <p>不知不觉也是看了很多番和小说了，虽然不多，但是也很多了<s>废话</s></p>
-                        <a class="card_link" href="interest.html#p3"></a>
+                        <a class="card-link" href="interest.html#p3"></a>
                     </article>
                 </div>
                 <div class="center mt">
