single_blog_page_complete

--- a/single_blog.html
+++ b/single_blog.html
@@ -2,10 +2,9 @@
 <html lang="zh-CN" data-theme="light">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>个人博客 | Blog</title>
-    <meta name="description" content="个人博客，分享编程与生活的点滴" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>博客标题（占位符）</title>
     <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -26,31 +25,18 @@
             </nav>
         </div>
     </header>
-    <main>
-        <section class="page-hero mini">
-            <div class="container">
-                <h1>个人博客</h1>
-                <p class="subtitle">分享编程与生活的点滴</p>
-            </div>
-        </section>
-        <section class="section">
-            <div class="container">
-                <div class="large-cards-list">
-                    <article class="large-card">
-                        <h2>欢迎来到我的个人博客</h2>
-                        <p class="blog-meta">posted on 2025-10-01 by YewFence</p>
-                        <p class="brief-summary">这里是YewFence的第一个个人博客，记录我在编程学习和生活中的点滴。</p>
-                        <a class="card-link" href="single_blog.html"></a>
-                    </article>
-                </div>
-            </div>
-        </section>
+    <main class="blog-container">
+        <article class="blog-content">
+            <h2 class="blog-title">博客标题（占位符）</h2>
+            <p>博客内容（占位符）</p>
+        </article>
     </main>
     <footer class="site-footer">
         <div class="container footer-inner">
             <p>© <span id="year"></span> YewFence.</p>
         </div>
     </footer>
+    <button class="btn primary blog-back">返回</button>
     <button id="backToTop" aria-label="返回顶部" class="back-to-top" hidden>↑</button>
     <script src="js/main.js"></script>
 </body>
