--- a/single_blog.html
+++ b/single_blog.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>博客标题（占位符）</title>
+    <title>标题加载中</title>
     <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -26,9 +26,14 @@
         </div>
     </header>
     <main class="blog-container">
-        <article class="blog-content">
-            <h2 class="blog-title">博客标题（占位符）</h2>
-            <p>博客内容（占位符）</p>
+        <article id="blog-content">
+            <div id="blog-markdown">
+                <h2>标题加载中</h2>
+                <p>内容加载中</p>
+            </div>
+            <div class="blog-meta">
+                <span class="blog-date">发布日期加载中</span> | <span class="blog-author">作者加载中</span>
+            </div>
         </article>
     </main>
     <footer class="site-footer">
@@ -39,6 +44,8 @@
     <button class="btn primary blog-back">返回</button>
     <button id="backToTop" aria-label="返回顶部" class="back-to-top" hidden>↑</button>
     <script src="js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
+    <script src="js/single_blog_load.js"></script>
 </body>
 
 </html>
