forget_the_back_btn

--- a/single_blog.html
+++ b/single_blog.html
@@ -41,7 +41,7 @@
             <p>© <span id="year"></span> YewFence.</p>
         </div>
     </footer>
-    <button class="btn primary blog-back">返回</button>
+    <a class="btn primary blog-back" href="blogs_summary.html">返回</a>
     <button id="backToTop" aria-label="返回顶部" class="back-to-top" hidden>↑</button>
     <script src="js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
