--- a/management.html
+++ b/management.html
@@ -24,13 +24,15 @@
   </header>
 
   <main class="mgmt-wrapper">
-    <div class="container">
-      <h1>管理页面</h1>
-      <p class="future">这是一个占位页面，仅在前端进行最小认证。</p>
-      <div style="margin-top:1rem; display:flex; gap:.5rem; flex-wrap:wrap;">
-        <button class="btn" id="btnLogout">退出登录</button>
-        <a class="btn" href="index.html">返回首页</a>
+    <div class="container" id="mgmtRoot">
+      <div style="display:flex; justify-content:space-between; align-items:center; gap:1rem; margin-bottom:1rem;">
+        <h1 style="margin:0;">管理页面</h1>
+        <div style="display:flex; gap:.5rem; flex-wrap:wrap;">
+          <button class="btn" id="btnLogout">退出登录</button>
+          <a class="btn" href="index.html">返回首页</a>
+        </div>
       </div>
+      <!-- 管理内容将注入到此容器 -->
     </div>
   </main>
 
@@ -44,6 +46,9 @@
 
   <script src="js/main.js"></script>
   <script src="js/auth.js"></script>
+  <!-- 可选：用于打包导出 MD 文件 -->
+  <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
+  <script src="js/management.js"></script>
   <script>
     (function(){
       // 简单访问守卫：若非当前会话认证，则回到登录
