format_html_and_js_comment

--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,7 @@
         <div class="container">
             <div class="title-wrapper">
                 <h2 class="section-title" id="contact-title">联系渠道</h2>
+                <!-- 提示信息仅在需要时显示 -->
                 <div id="prompt-message">
                     <p>点击以复制</p>
                 </div>
