--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- 请注意，我没有刻意增加任何的桌面端正常横屏比例之外的适配，在其他地方打开可能有无法预料的问题 -->
 <html lang="zh-CN" data-theme="light">
 <head>
     <meta charset="UTF-8" />
@@ -25,6 +26,7 @@
     </header>
 
     <main>
+        <!-- section分隔网页滚动的吸附点 -->
         <section class="hero scroller" id="hero">
             <div class="container hero-inner">
                 <h1>你好，我是 <span class="accent">YewFence</span></h1>
